# retail-demand-forecasting

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
dbt/retail_demand/: README.md  dbt_project.yml
dbt/retail_demand/macros/: generate_schema_name.sql
docker/: serving.Dockerfile
docs/: architecture.md  costs.md  monitoring.md
frontend/: .env.example  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccuracyChart.tsx  ForecastChart.tsx  ForecastDemo.tsx  ModelInfoCard.tsx  SeriesPicker.tsx
frontend/lib/: api.ts  labels.ts  types.ts
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
notebooks/: 01_eda.ipynb
src/retail_demand/: config.py
src/retail_demand/data_engineering/: daily_ingest.py  dbt_runner.py  download_m5.py  load_to_bigquery.py  prepare_m5.py  synthetic_daily_feed.py
src/retail_demand/models/: __init__.py  baseline.py  evaluate.py  features.py  train.py
src/retail_demand/monitoring/: __init__.py  drift_check.py  retrain_trigger.py
tests/: test_backfill_predictions.py  test_baseline.py  test_batch_predict.py  test_cloudbuild_config.py  test_daily_ingest.py  test_drift_check.py  test_evaluate.py  test_features.py  test_pipeline_components.py  test_pipeline_queries.py  test_prepare_m5.py  test_retrain_trigger.py  test_serving_app.py  test_submit_pipeline.py  test_synthetic_daily_feed.py  test_train.py  test_training_pipeline.py
(+23 files in other folders)
